# EndProjectVU-BSc

./: EndProject.ipynb  all_scenes_models_predictions_log.csv  indoor_model_evaluation_results.csv  indoor_models_predictions_log.csv  model_evaluation_results.csv  readme.txt
indoor_ip_camera_processing/: CMakeLists.txt  package.xml
indoor_ip_camera_processing/launch/: start_camera.launch
indoor_ip_camera_processing/scripts/: indoor_ip_camera_processor.py
ip_camera_processing_single/: CMakeLists.txt  package.xml
ip_camera_processing_single/launch/: start_camera.launch
ip_camera_processing_single/scripts/: ip_camera_processor_single.py
